--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -1190,9 +1190,11 @@ main.flex-fill{
 .services-image{
   width: 100%;
   height: 100%;
-  display: block;
   object-fit: cover;
-  object-position: center 65%;
+
+  /* move image UP to reveal more sky */
+  object-position: center 40%;
+
   filter: brightness(0.9) contrast(0.95) saturate(0.9);
   opacity: 0.96;
 }
@@ -1218,8 +1220,9 @@ main.flex-fill{
   height: 100%;
 }
 
-/* Mobile */
 @media (max-width: 991px){
-  .services-image-wrap{ height: 240px; }
+  .services-image{
+    object-position: center 45%;
+  }
 }
 
