--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -1270,10 +1270,9 @@ main.flex-fill{
 }
 
 /* FINAL CTA centring */
-.cta-section{
+.cta-section .container{
   display: flex;
   justify-content: center;
-  padding-top: 40px;
 }
 
 .cta-inner{
@@ -1282,7 +1281,3 @@ main.flex-fill{
   width: 100%;
 }
 
-.cta-inner p{
-  margin-left: auto;
-  margin-right: auto;
-}
