--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -37,7 +37,7 @@
 
 .preloader-accent{
   font-style: italic;
-  color: #820d0d; /* brand red */
+  color: #820d0d;
 }
 
 .underlineload:hover:after{
