--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -446,9 +446,10 @@ textarea {
     top: 60px !important;
     -webkit-box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0) !important;
     box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0) !important;
+    background: #fbf6f5 !important; /* solid */
   }
   .navbar .dropdown-grey {
-    background: rgba(251, 246, 245, 0.75) !important;
+    background: #fbf6f5 !important; /* solid */
   }
 }
 
